// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarPageBody component Basic Version Should match snapshot 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  margin-left: ",
          [Function],
          ";
  min-height: 10px;
",
        ],
      },
      "displayName": "styled.div",
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  sideBarShown={true}
/>
`;

exports[`SideBarPageBody component with Header Version Should match snapshot 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-bwzfXH",
        "isStatic": false,
        "rules": Array [
          "
  margin-left: ",
          [Function],
          ";
  min-height: 10px;
",
          "
  margin-top: 56px;
",
        ],
      },
      "displayName": "Styled(styled.div)",
      "render": [Function],
      "styledComponentId": "sc-bwzfXH",
      "target": "div",
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
